--- a/style.css
+++ b/style.css
@@ -17,8 +17,34 @@ header {
     justify-content: center;
 }
 
+/* .head-section-left{
+    text-align: center;
+} */
+
 .first-caption{
     font-size: 80px;
     color: #212529;
     width: 750px;
+    margin-bottom: 20px;
+}
+
+.first-description{
+    width:650px;
+    margin-bottom: 20px;
+    color: #6c757d;
+}
+
+.btn-primary{
+    background-color: #B5266B;
+    padding: 12px 35px;
+    border: none;
+    color: white;
+    border-radius: 8px;
+    font-size: 18px;
+}
+
+.head-section-right img{
+    height: 800px;
+    width: 600px;
+    margin-top: 50px;
 }
