--- a/style.css
+++ b/style.css
@@ -201,8 +201,67 @@ figcaption{
 
 .insta-images img{
     height: 350px;
-    width: 280px;
+    width: 270px;
     border-radius: 5px;
 }
 
 /* end of instagram section */
+
+
+.subscription-section{
+    background-image: url('Asset/Rectangle\ 9.png');
+    max-width: 1138px;
+    margin: 50px auto;
+    background-repeat: no-repeat;
+    height: 350px;
+    text-align: center;
+    /* display: flex;
+    justify-content: center; */
+}
+
+.subscribe-title{
+    font-size: 40px;
+    color: #212529;
+    padding: 100px 0 5px 0;
+}
+
+.subscribe-desc{
+    color: #6c757d;
+    margin-bottom: 30px;
+}
+
+.email-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.email-section input{
+    background-color: white;
+    padding: 15px 35px;
+    border: none;
+    width: 400px;
+    /* color: white; */
+    border-radius: 8px;
+    /* font-size: 18px; */
+}
+
+footer{
+    background-color: #bbd0ff;
+    height: 350px;
+    text-align: center;
+    padding: 150px 0 60px 0;
+}
+
+.footer-caption{
+    font-size: 80px;
+    color: white;
+
+}
+
+.footer-desc{
+    color: #6c757d;
+    margin: 0 auto 60px auto;
+    width: 600px;
+}
