few things are changed

--- a/style.css
+++ b/style.css
@@ -269,6 +269,7 @@ figcaption{
     background-repeat: no-repeat;
     height: 350px;
     text-align: center;
+    border-radius: 5px;
     /* display: flex;
     justify-content: center; */
 }
